<resources>
    <string name="app_name">Batalla De Minijuegos</string>
    <string name="boton_practicar">PRACTICAR</string>
    <string name="etiq_globos">¡NO EXPLOTES LOS NEGROS!</string>
    <string name="text_titulo">BATALLA DE MINIJUEGOS</string>
    <string name="boton_instrucciones">CÓMO JUGAR</string>
    <string name="boton_salir">SALIR</string>
    <string name="puntos">0</string>
    <string name="boton_batalla">BATALLA</string>
    <string name="boton_registrar">REGISTRAR</string>
    <string name="boton_acceder">ACCEDER</string>
    <string name="titulo_iniciarsesion">INICIAR SESIÓN</string>
    <string name="hint_email">Email</string>
    <string name="hint_contrasenia">Contraseña</string>
    <string name="contra_olvidada"><u>He olvidado la contraseña</u></string>
    <string name="title_activity_activityprueba">activityprueba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="item_mod_contra">Modificar contraseña</string>
    <string name="item_cerrar_sesion">Cerrar sesión</string>
    <string name="item_eliminar_cuenta">Eliminar cuenta</string>
    <string name="text_contra_acutal">Introducir la contraseña actual:</string>
    <string name="text_contra_nueva1">Introducir la contraseña nueva:</string>
    <string name="text_contra_nueva2">Confirmar la contraseña nueva:</string>
    <string name="hint_contra_actual">Contraseña actual</string>
    <string name="hint_contra_nueva">Contraseña nueva</string>
    <string name="boton_aceptar">ACEPTAR</string>
    <string name="boton_cancelar">CANCELAR</string>
    <string name="item_edit_nombre">Editar nombre de usuario</string>
    <string name="etiq_buscando">BUSCANDO...</string>
    <string name="etiq_cargando">CARGANDO...</string>
    <string name="etiq_conectando">CONECTANDO...</string>
    <string name="etiq_cargar_minijuego">CARGANDO MINIJUEGO...</string>
    <string name="etiq_cargar_batalla">CARGANDO BATALLA...</string>

    <string name="boton_buscar">BUSCAR PARTIDA</string>
    <string name="boton_cancelar_busqueda">CANCELAR BÚSQUEDA</string>
    <string name="titulo_globos">EXPLOTA LOS GLOBOS</string>
    <string name="titulo_sonidos">¿QUÉ SUENA?</string>
    <string name="textoGanarBatalla">¡WOW! HAS GANADO</string>
    <string name="textoPerderBatalla">¡OH NO! HAS PERDIDO</string>
    <string name="textoBotonVolverAJugar">VOLVER A JUGAR</string>
    <string name="textoPuntuacion">PUNTUACIÓN</string>
    <string name="textoFinDelJuego">¡FIN DEL JUEGO!</string>
    <string name="textoBatallaTerminada">BATALLA TERMIANDA</string>
    <string name="textoClasificacion">CLASIFICACIÓN</string>
    <string name="textoSonidos">¿QUÉ SUENA?</string>
    <string name="etiq_guion">-</string>
    <string name="etiq_vs">VS</string>
    <string name="textoPuntuaciones">PUNTUACIONES</string>
    <string name="textoEscucha">¡ESCUCHA!</string>
    <string name="textoComienza">¡COMIENZA!</string>
    <string name="titulo_pulsaciones">PULSACIONES</string>
    <string name="boton_pulsaciones">¡PULSAME!</string>
    <string name="titulo_reloj">¡CUENTA!</string>
    <string name="textoMinijuegos">MINIJUEGOS</string>
    <string name="etiq_parar">PARAR EN:</string>
    <string name="etiq_tapar1">¡CUE</string>
    <string name="etiq_tapar2">NTA!</string>
    <string name="boton_parar">PARAR</string>
    <string name="textoEmpate">¡EMPATE!</string>
    <string name="textoTotal">TOTAL</string>
    <string name="boton_terminar">TERMINAR</string>
    <string name="text_comparar">COMPARANDO RESULTADOS...</string>
    <string name="titulo_bombas">¡BOOM!</string>
    <string name="botonClasificacion">VER CLASIFICACIÓN</string>
    <string name="text_mejor_puntuacion">TU MEJOR PUNTUACIÓN</string>
</resources>