<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#64D18C"
    tools:context=".activities.ActivityAuthentication">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/best_in_class"
            android:text="@string/titulo_iniciarsesion"
            android:textAlignment="center"
            android:textColor="#BAFAFAFA"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="35dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/best_in_class"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="#D5FAFAFA"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/textContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/best_in_class"
            android:hint="@string/hint_contrasenia"
            android:inputType="textPassword"
            android:textColor="#D5FAFAFA"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textContraOlvidada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/best_in_class"
            android:text="@string/contra_olvidada"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botonRegistrar"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="112dp"
                android:layout_height="84dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/color_azul"
                android:fontFamily="@font/best_in_class"
                android:onClick="registrar"
                android:text="@string/boton_registrar"
                android:textColor="#D5FAFAFA"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/botonAcceder"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="112dp"
                android:layout_height="84dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/color_naranja"
                android:fontFamily="@font/best_in_class"
                android:onClick="acceder"
                android:text="@string/boton_acceder"
                android:textColor="#D5FAFAFA"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textCargando"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/best_in_class"
            android:text="@string/etiq_cargando"
            android:textAlignment="center"
            android:textColor="#BAFAFAFA"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="invisible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>