<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5000000">

    <TextView
        android:id="@+id/textCorrecto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/balloons"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/textoFinDelJuego"
        android:textColor="#BAFAFAFA"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/textoPuntosFinales"
        android:layout_width="264dp"
        android:layout_height="83dp"
        android:fontFamily="@font/balloons"
        android:textAlignment="center"
        android:textColor="#BAFAFAFA"
        android:textSize="65sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="273dp"
        android:layout_height="64dp"
        android:fontFamily="@font/balloons"
        android:paddingTop="10sp"
        android:text="@string/textoPuntuacion"
        android:textAlignment="center"
        android:textColor="#BAFAFAFA"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCorrecto"
        app:layout_constraintVertical_bias="0.01999998" />

    <Button
        android:id="@+id/botonSalir"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20sp"
        android:background="@drawable/color_naranja"
        android:fontFamily="@font/balloons"
        android:onClick="salir"
        android:text="@string/boton_salir"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoPuntosFinales"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/botonVolverJugar"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20sp"
        android:background="@drawable/color_azul"
        android:fontFamily="@font/balloons"
        android:text="@string/textoBotonVolverAJugar"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoPuntosFinales"
        app:layout_constraintVertical_bias="0.060000002" />
</androidx.constraintlayout.widget.ConstraintLayout>