<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B079DF"
    tools:context=".minijuegos.ActivityJuegoReloj">

    <TextView
        android:id="@+id/textTiempo"
        android:layout_width="338dp"
        android:layout_height="138dp"
        android:fontFamily="@font/balloons"
        android:textAlignment="center"
        android:textColor="#6B0B9F"
        android:textSize="120sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.455" />

    <TextView
        android:id="@+id/textCronometro"
        android:layout_width="255dp"
        android:layout_height="100dp"
        android:background="@drawable/color_n"
        android:fontFamily="@font/best_in_class"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textColor="#FB0202"
        android:textSize="65sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/botonParar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_salir"
        app:layout_constraintVertical_bias="0.424" />

    <TextView
        android:id="@+id/textTaparCronometro1"
        android:layout_width="123dp"
        android:layout_height="90dp"
        android:background="#E81C1C"
        android:fontFamily="@font/best_in_class"
        android:paddingTop="30dp"
        android:text="@string/etiq_tapar1"
        android:textAlignment="textEnd"
        android:textColor="#D5FAFAFA"
        android:textSize="35sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/botonParar"
        app:layout_constraintEnd_toEndOf="@+id/textCronometro"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/textCronometro"
        app:layout_constraintTop_toBottomOf="@+id/boton_salir"
        app:layout_constraintVertical_bias="0.426" />

    <TextView
        android:id="@+id/textTaparCronometro2"
        android:layout_width="123dp"
        android:layout_height="90dp"
        android:background="#E81C1C"
        android:fontFamily="@font/best_in_class"
        android:paddingTop="30dp"
        android:text="@string/etiq_tapar2"
        android:textAlignment="textStart"
        android:textColor="#D5FAFAFA"
        android:textSize="35sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/botonParar"
        app:layout_constraintEnd_toEndOf="@+id/textCronometro"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="@+id/textCronometro"
        app:layout_constraintTop_toBottomOf="@+id/boton_salir"
        app:layout_constraintVertical_bias="0.426" />

    <Button
        android:id="@+id/boton_salir"
        android:layout_width="93dp"
        android:layout_height="45dp"
        android:background="@drawable/color_rojo_sin_borde"
        android:enabled="false"
        android:fontFamily="@font/balloons"
        android:onClick="salir"
        android:text="@string/boton_salir"
        android:textColor="#DCF4EFEF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/textPuntos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/textPuntos"
        android:layout_width="102dp"
        android:layout_height="49dp"
        android:fontFamily="@font/balloons"
        android:text="@string/puntos"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <Button
        android:id="@+id/botonParar"
        android:layout_width="172dp"
        android:layout_height="101dp"
        android:background="@drawable/color_gris"
        android:fontFamily="@font/best_in_class"
        android:onClick="parar"
        android:text="@string/boton_parar"
        android:textAlignment="center"
        android:textColor="#D5FAFAFA"
        android:textSize="40sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/textoPararEn"
        android:layout_width="251dp"
        android:layout_height="59dp"
        android:fontFamily="@font/best_in_class"
        android:paddingTop="10dp"
        android:text="@string/etiq_parar"
        android:textAlignment="center"
        android:textColor="#D5FAFAFA"
        android:textSize="35sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_salir"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textTiempoBuscar"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:background="@drawable/color_n"
        android:fontFamily="@font/best_in_class"
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:textColor="#D5FAFAFA"
        android:textSize="35sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textCronometro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoPararEn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textComparar"
        android:layout_width="369dp"
        android:layout_height="36dp"
        android:fontFamily="@font/best_in_class"
        android:text="@string/text_comparar"
        android:textAlignment="center"
        android:textColor="#D5FAFAFA"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/botonParar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCronometro"
        app:layout_constraintVertical_bias="0.16000003" />

    <TextView
        android:id="@+id/textRival"
        android:layout_width="194dp"
        android:layout_height="37dp"
        android:fontFamily="@font/best_in_class"
        android:text="TIEMPO RIVAL:"
        android:textAlignment="center"
        android:textColor="#D5FAFAFA"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/botonParar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textComparar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textTiempoRival"
        android:layout_width="81dp"
        android:layout_height="36dp"
        android:fontFamily="@font/best_in_class"
        android:textAlignment="center"
        android:textColor="#D5FAFAFA"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/botonParar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toEndOf="@+id/textRival"
        app:layout_constraintTop_toBottomOf="@+id/textComparar"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>