<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#82E6E6"
    tools:context=".minijuegos.ActivityJuegoGlobos">

    <TextView
        android:id="@+id/textTiempo"
        android:layout_width="338dp"
        android:layout_height="138dp"
        android:fontFamily="@font/balloons"
        android:textAlignment="center"
        android:textColor="#6B0B9F"
        android:textSize="120sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <TextView
        android:id="@+id/textGlobos"
        android:layout_width="336dp"
        android:layout_height="90dp"
        android:fontFamily="@font/balloons"
        android:text="@string/etiq_globos"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTiempo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textPuntos"
        android:layout_width="102dp"
        android:layout_height="49dp"
        android:fontFamily="@font/balloons"
        android:text="@string/puntos"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <Button
        android:id="@+id/boton_salir"
        android:layout_width="93dp"
        android:layout_height="45dp"
        android:background="@drawable/color_rojo_sin_borde"
        android:enabled="false"
        android:fontFamily="@font/balloons"
        android:onClick="salir"
        android:text="@string/boton_salir"
        android:textColor="#DCF4EFEF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/textPuntos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/textCronometro"
        android:layout_width="112dp"
        android:layout_height="49dp"
        android:fontFamily="@font/balloons"
        android:textAlignment="center"
        android:textColor="#FB0202"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

</androidx.constraintlayout.widget.ConstraintLayout>